color contrast fix

--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -67,5 +67,5 @@ div {
 
 a {
     text-decoration: none;
-    color: #FF7D00;
+    color: yellow;
 }
