--- a/css/landing.css
+++ b/css/landing.css
@@ -48,7 +48,7 @@ p {
 
 a {
     text-decoration: none;
-    color: #FF7D00;
+    color: yellow;
 }
 
 img {
