--- a/css/schedule.css
+++ b/css/schedule.css
@@ -4,7 +4,7 @@ html{
 }
 
 header h1,h2{
-    color: #001524;
+    color: yellow;
 }
 
 /* NAV BAR CSS */
